--- a/sitebricks-acceptance-tests/pom.xml
+++ b/sitebricks-acceptance-tests/pom.xml
@@ -60,6 +60,12 @@
       <artifactId>jetty-websocket</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mortbay.jetty</groupId>
+      <artifactId>jsp-2.1-glassfish</artifactId>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
   
 </project>
