Hack to add the jstl jar on the jetty classpath, needed to make jsp test working on the command line

--- a/pom.xml
+++ b/pom.xml
@@ -279,6 +279,11 @@
         <artifactId>jsp-2.1-glassfish</artifactId>
         <version>2.1.v20100127</version>
       </dependency>
+      <dependency>
+        <groupId>taglibs</groupId>
+        <artifactId>standard</artifactId>
+        <version>1.1.2</version>
+      </dependency>
       <!-- Testing -->
       <dependency>
         <groupId>org.seleniumhq.webdriver</groupId>
