Initial implementation of validation code

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <cglib.full.version>2.0.2</cglib.full.version>
     <lucene.version>4.0.0</lucene.version>
     <jedis.version>2.1.0</jedis.version>
+    <bval.version>0.5</bval.version>
   </properties>
 
   <modules>
@@ -147,6 +148,12 @@
       </dependency>
 
       <dependency>
+        <groupId>javax.validation</groupId>
+        <artifactId>validation-api</artifactId>
+        <version>1.0.0.GA</version>
+      </dependency>
+
+      <dependency>
         <groupId>net.jcip</groupId>
         <artifactId>jcip-annotations</artifactId>
         <version>1.0</version>
@@ -224,6 +231,11 @@
         <version>1.5.2</version>
       </dependency>
 
+      <dependency>
+        <groupId>org.apache.bval</groupId>
+        <artifactId>bval-guice</artifactId>
+        <version>${bval.version}</version>
+      </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
