move ValidationUtil to converter module

--- a/sitebricks-converter/pom.xml
+++ b/sitebricks-converter/pom.xml
@@ -40,5 +40,9 @@
       <groupId>org.codehaus.jackson</groupId>
       <artifactId>jackson-mapper-asl</artifactId>
     </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
   </dependencies>
 </project>
