o convert SB over to jetty-9, this is really the tests and websocket related classes

--- a/sitebricks-channel/pom.xml
+++ b/sitebricks-channel/pom.xml
@@ -24,12 +24,19 @@
       <groupId>com.google.sitebricks</groupId>
       <artifactId>sitebricks</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.eclipse.jetty</groupId>
-      <artifactId>jetty-websocket</artifactId>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.websocket</groupId>
+        <artifactId>websocket-api</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.websocket</groupId>
+        <artifactId>websocket-server</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty.websocket</groupId>
+        <artifactId>websocket-servlet</artifactId>
+      </dependency>    
+      <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-continuation</artifactId>
       <scope>compile</scope>
