--- a/sitebricks-easy-client/pom.xml
+++ b/sitebricks-easy-client/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.8-SNAPSHOT</version>
+    <version>0.8.8</version>
   </parent>
   <artifactId>sitebricks-easy-client</artifactId>
   <name>Sitebricks :: Easy Client</name>
