Added a few common mime types

--- a/sitebricks/src/main/resources/com/google/sitebricks/rendering/resource/mimetypes.properties
+++ b/sitebricks/src/main/resources/com/google/sitebricks/rendering/resource/mimetypes.properties
@@ -4,6 +4,10 @@
 __defaultMimeType=text/plain
 
 #regex=mimeType
+(.)*\\.json=application/json
 (.)*\\.js=text/javascript
 (.)*\\.xml=text/xml
 (.)*\\.png=image/png
+(.)*\\.jpg=image/jpeg
+(.)*\\.gif=image/gif
+(.)*\\.css=text/css
