--- a/pom.xml
+++ b/pom.xml
@@ -236,6 +236,11 @@
         <artifactId>bval-guice</artifactId>
         <version>${bval.version}</version>
       </dependency>
+      <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.2.2</version>
+      </dependency>
 
       <dependency>
         <groupId>org.slf4j</groupId>
