--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -76,6 +76,10 @@
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+    </dependency>
 
     <!-- Validation -->
     <dependency>
