--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <module>sitebricks-converter</module>
     <module>sitebricks-client</module>
     <module>sitebricks-easy-client</module>
+    <module>sitebricks-extensions</module>
     <module>sitebricks-acceptance-tests</module>
     <module>sitebricks-test-support</module>
     <module>sitebricks-mail</module>
@@ -393,22 +394,18 @@
   </build>
 
   <!-- This should be removed when the googlecode repositories are migrated to the standard Nexus OSS repository infrastructure -->
-      <distributionManagement>
-        <repository>
-          <id>aos.public-release</id>
-          <name>AOS Public Release Repository</name>
-          <url>http://repo.aos.io/repository/aos.public-release</url>
-        </repository>
-        <snapshotRepository>
-          <id>aos.public-snapshot</id>
-          <name>AOS Public Snapshot Repository</name>
-          <url>http://repo.aos.io/repository/aos.public-snapshot</url>
-        </snapshotRepository>
-        <site>
-          <id></id>
-          <name></name>
-        </site>
-      </distributionManagement>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>google-snapshots</id>
+      <name>Sonatype OSS Nexus Snapshots</name>
+      <url>https://oss.sonatype.org/content/repositories/google-snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>google-with-staging</id>
+      <name>Nexus OSS Staging Repository</name>
+      <url> https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 
   <repositories>
   </repositories>
