move fileupload extension to its own module

--- a/sitebricks-extensions/pom.xml
+++ b/sitebricks-extensions/pom.xml
@@ -15,8 +15,14 @@
       <artifactId>sitebricks</artifactId>
     </dependency>
     <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+    </dependency>
+    <!-- provided deps -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 
