move bval-guice in sitebricks-extension

--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
       </dependency>
       <dependency>
         <groupId>com.google.sitebricks</groupId>
+        <artifactId>sitebricks-extensions</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.sitebricks</groupId>
         <artifactId>sitebricks-stat</artifactId>
         <version>${project.version}</version>
       </dependency>
