--- a/sitebricks-extensions/pom.xml
+++ b/sitebricks-extensions/pom.xml
@@ -18,6 +18,10 @@
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.bval</groupId>
+      <artifactId>bval-guice</artifactId>
+    </dependency>
     <!-- provided deps -->
     <dependency>
       <groupId>javax.servlet</groupId>
