--- a/sitebricks-channel/pom.xml
+++ b/sitebricks-channel/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.9-SNAPSHOT</version>
+    <version>0.8.9</version>
   </parent>
   <artifactId>sitebricks-channel</artifactId>
   <name>Sitebricks :: Channel</name>
