--- a/sitebricks-persist-disk/pom.xml
+++ b/sitebricks-persist-disk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.9-SNAPSHOT</version>
+    <version>0.8.9</version>
   </parent>
   <artifactId>sitebricks-persist-disk</artifactId>
   <name>Sitebricks :: Persistence Module (Disk)</name>
