--- a/sitebricks-cloud/pom.xml
+++ b/sitebricks-cloud/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.9</version>
+    <version>0.8.10-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-cloud</artifactId>
   <name>Sitebricks :: Cloud</name>
