--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.9</version>
+    <version>0.8.10-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks</artifactId>
   <name>Sitebricks :: Core</name>
