--- a/sitebricks-annotations/pom.xml
+++ b/sitebricks-annotations/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.10-SNAPSHOT</version>
+    <version>0.8.10</version>
   </parent>
   <artifactId>sitebricks-annotations</artifactId>
   <name>Sitebricks :: Annotations</name>
