--- a/slf4j/pom.xml
+++ b/slf4j/pom.xml
@@ -7,6 +7,7 @@
   </parent>  
   <artifactId>sitebricks-slf4j</artifactId>
   <name>Sitebricks :: SLF4J Module</name>
+  <packaging>${packaging}</packaging>
   <description>Slf4j logging support for Guice applications (does not require sitebricks)</description>
 
   <dependencies>
