--- a/sitebricks-annotations/pom.xml
+++ b/sitebricks-annotations/pom.xml
@@ -6,5 +6,6 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-annotations</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Annotations</name>
 </project>
