--- a/sitebricks-client/pom.xml
+++ b/sitebricks-client/pom.xml
@@ -6,6 +6,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-client</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Client</name>
 
   <dependencies>
