--- a/sitebricks-extensions/pom.xml
+++ b/sitebricks-extensions/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-extensions</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Extensions</name>
 
   <dependencies>
