--- a/sitebricks-mail/pom.xml
+++ b/sitebricks-mail/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-mail</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Mail Client</name>
 
   <dependencies>
