--- a/sitebricks-options/pom.xml
+++ b/sitebricks-options/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-options</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Options</name>
 
   <repositories>
