--- a/sitebricks-persist-redis/pom.xml
+++ b/sitebricks-persist-redis/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-persist-redis</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Persistence Module (Redis)</name>
 
   <repositories>
