--- a/sitebricks-persist-sql/pom.xml
+++ b/sitebricks-persist-sql/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-persist-sql</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Persistence Module (SQL)</name>
 
   <dependencyManagement>
