--- a/sitebricks-test-support/pom.xml
+++ b/sitebricks-test-support/pom.xml
@@ -7,6 +7,7 @@
     <version>0.8.11-SNAPSHOT</version>
   </parent>
   <artifactId>sitebricks-test-support</artifactId>
+  <packaging>${packaging}</packaging>
   <name>Sitebricks :: Test Support</name>
 
   <dependencies>
