--- a/sitebricks-extensions/pom.xml
+++ b/sitebricks-extensions/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.11-SNAPSHOT</version>
+    <version>0.8.11</version>
   </parent>
   <artifactId>sitebricks-extensions</artifactId>
   <packaging>${packaging}</packaging>
