rest: match paths using regexp
Adds regex pattern matching on paths, so path variables could be more
complex that are now.

Here are some examples
```
/r/users/:id{\d+}
```

will match only

```
/r/users/123
```

but not

```
/r/users/john
```

--- a/sitebricks/pom.xml
+++ b/sitebricks/pom.xml
@@ -14,7 +14,7 @@
     <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
-      <classifier>jdk15</classifier>
+      <version>6.1.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
