--- a/sitebricks-persist-disk/pom.xml
+++ b/sitebricks-persist-disk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.google.sitebricks</groupId>
     <artifactId>sitebricks-parent</artifactId>
-    <version>0.8.12-SNAPSHOT</version>
+    <version>0.8.12.egym.1</version>
   </parent>
   <artifactId>sitebricks-persist-disk</artifactId>
   <packaging>${packaging}</packaging>
